build/resources/test/LO-2/InvalidPrograms/test_17.lo
// Bad punctuation

int main(()) {
    int a, b;
    {
        return 1;
    }
}